kubernetes/nginx/ingress/ingress-nginx-gce.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ${namespace}
  name: nginx-ingress-gce
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${global_static_ip_name}
    networking.gke.io/managed-certificates: ${managed_certificate_name}
    networking.gke.io/v1beta1.FrontendConfig: ${frontend_config_name}
spec:
  defaultBackend:
    service:
      name: ingress-nginx-controller
      port:
        number: 80
